[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Shaders/blur.shader" type="Shader" id=1]
[ext_resource path="res://assets/GFX/Items/obálka.png" type="Texture" id=2]
[ext_resource path="res://assets/GFX/Items/dopis.png" type="Texture" id=3]
[ext_resource path="res://assets/Fonts/Indie_Flower/IndieFlower-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://letter.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/amount = 1.5

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[node name="Letter" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 1 )
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Letter" type="TextureButton" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.5
margin_top = -139.0
margin_right = 220.5
margin_bottom = 139.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterOpen" type="TextureRect" parent="Background"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -494.0
margin_top = -451.5
margin_right = 314.0
margin_bottom = 315.5
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpText" type="RichTextLabel" parent="Background/LetterOpen"]
margin_left = 173.874
margin_top = 90.3858
margin_right = 749.874
margin_bottom = 406.386
rect_rotation = 2.1894
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Vážený pane Novotný,
Z důvodu nedodržení podmínek Vám prostřednictvím tímto dopisem sdělujeme o zesplatnění Vaši půjčky."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownText" type="RichTextLabel" parent="Background/LetterOpen"]
margin_left = 152.667
margin_top = 413.0
margin_right = 695.667
margin_bottom = 714.0
rect_rotation = 4.06321
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Tímto Vás žádáme o jednorázové splácení částky 
           31 037 Kč
do pěti dnů. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Read" type="Button" parent="Background"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0001
margin_top = -80.0
margin_right = 77.9999
margin_bottom = -33.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Zavřít"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/Letter" to="." method="_on_Letter_pressed"]
[connection signal="pressed" from="Background/Read" to="." method="_on_Read_pressed"]
